Fix bugs on Contact us page as content position and content z-index, also add sidebar on this page.

--- a/pvsz-web/src/components/About.css
+++ b/pvsz-web/src/components/About.css
@@ -11,8 +11,8 @@
     z-index: 0;
 }
 
-.title {
-    font-size: 3vh;
+.aboutTitle {
+    font-size: 4vw;
 }
 
 .navbar_style {
@@ -54,13 +54,13 @@ main p {
 
 .rectangle {
     border-radius: 25px;
-    z-index: 1;
+    /* z-index: 1; */
     background-color: #BACB94;
     height: 35rem;
     width: auto;
     margin:1.5rem ;
     top: 0; left: 0; bottom: 0; right: 0;
-    
+    position: relative;
 }
 
 /* .rectangleContent {
@@ -85,13 +85,15 @@ main p {
 
 } */
 .content {
+    position: absolute;
     z-index: 100;
     height: 100%;
     width: 100%;
-    top: 0;
+    /* top: 0; */
     overflow: hidden;
-    z-index: 3;
+    /* z-index: 3; */
     font-size: 2vh;
+    padding-top: 30%;
 }
 
 .img {
